--- a/LocOut/mobile/src/main/res/layout/activity_main.xml
+++ b/LocOut/mobile/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@android:color/background_light"
     tools:context="com.locout.android.MainActivity">
 
     <android.support.design.widget.AppBarLayout
