--- a/LocOut/mobile/src/main/res/layout/content_main.xml
+++ b/LocOut/mobile/src/main/res/layout/content_main.xml
@@ -10,6 +10,7 @@
 
     <ListView
         android:id="@+id/deviceListView"
+        android:divider="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
